...
    <Transition
        app:constraintSetEnd="@id/end"
        app:constraintSetStart="@id/start"
        app:layoutDuringTransition="honorRequest">
        <OnSwipe
            app:dragDirection="dragUp"
            app:touchAnchorId="@id/rv_movies" />
    </Transition>

    <!-- This is needed to be able to change the no search results layout views visibility -->
    <ConstraintSet android:id="@+id/common">

        <Constraint
            android:id="@id/iv_no_search_results"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/tv_no_search_results"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTag="state_no_search_results"
...
