<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Movies Explorer</string>

    <!-- Master Screen -->
    <string name="search_a_movie">Search a movie</string>
    <string name="hint_search_movie">Search a movie by name</string>
    <string name="cd_movies_header">Snacks and 3D Glasses</string>
    <string name="movies_header">Which movie are you watching tonight?</string>
    <string name="no_search_results">No search results found.\n\nTry a different keyword?</string>

    <!-- Detail Screen -->
    <string name="cd_error_state">Sorry, something went wrong.</string>
    <string name="released_in">Released in %s</string>
    <string name="cast">Cast</string>

</resources>
